--- a/apps/b2gfm.yml
+++ b/apps/b2gfm.yml
@@ -1,10 +1,10 @@
-name: Kloud File Manager
-description: File Manager & Kloudless app(unofficial) for KaiOS
+name: K File Manager
+description: File Manager for KaiOS
 icon: "https://cdn.discordapp.com/attachments/472144650128457738/839176477325000734/b2gffff.png"
 website: "https://github.com/arma7x/b2gfm"
 download:
-  url: "https://gitlab.com/cyan2048/snek/-/raw/master/arma7x/b2gfm/b2gfm.zip"
-  manifest: "https://gitlab.com/cyan2048/snek/-/raw/master/arma7x/b2gfm/manifest.webapp"
+    url: "https://raw.githubusercontent.com/cyan-2048/_store/main/arma7x/k%20file/k%20file.zip"
+    manifest: "https://raw.githubusercontent.com/cyan-2048/_store/main/arma7x/k%20file/manifest.webapp"
 type: privileged
 license: MIT
 author: arma7x <ahmadmuhamad101@gmail.com>
@@ -12,6 +12,6 @@ maintainer: Cyan <cyankindasus1@outlook.com>
 has_ads: false
 has_tracking: false
 meta:
-  tags: filemanager; files; backup; sync; wireless; kloudless;
-  categories:
-   - utility
+    tags: filemanager; files;
+    categories:
+        - utility
