--- a/apps/ajedrez.yml
+++ b/apps/ajedrez.yml
@@ -3,13 +3,13 @@ description: K-Chess is unofficial lichess.org client for KaiOS
 icon: "https://raw.githubusercontent.com/arma7x/kai-chess/master/icons/icon112x112.png"
 website: "https://github.com/arma7x/kai-chess"
 screenshots:
-  - "https://cdn.discordapp.com/attachments/472144650128457738/843903502043447327/VQ2PUi1daAAAAAElFTkSuQmCC.png"
-  - "https://cdn.discordapp.com/attachments/472144650128457738/843903423909068820/wN46FnCd8oKgAAAAABJRU5ErkJggg.png"
-  - "https://cdn.discordapp.com/attachments/472144650128457738/843902139041841212/4LfCWLRcXDay8AAAAASUVORK5CYII.png"
-  - "https://cdn.discordapp.com/attachments/472144650128457738/843902427769208912/cC7NadQ7ZRAAAAABJRU5ErkJggg.png"
+    - "https://cdn.discordapp.com/attachments/472144650128457738/843903502043447327/VQ2PUi1daAAAAAElFTkSuQmCC.png"
+    - "https://cdn.discordapp.com/attachments/472144650128457738/843903423909068820/wN46FnCd8oKgAAAAABJRU5ErkJggg.png"
+    - "https://cdn.discordapp.com/attachments/472144650128457738/843902139041841212/4LfCWLRcXDay8AAAAASUVORK5CYII.png"
+    - "https://cdn.discordapp.com/attachments/472144650128457738/843902427769208912/cC7NadQ7ZRAAAAABJRU5ErkJggg.png"
 download:
-  url: "https://gitlab.com/cyan2048/snek/-/raw/master/arma7x/chess/ajedrez.zip"
-  manifest: "https://gitlab.com/cyan2048/snek/-/raw/master/arma7x/chess/manifest.webapp"
+    url: "https://raw.githubusercontent.com/cyan-2048/_store/main/arma7x/chess/ajedrez.zip"
+    manifest: "https://raw.githubusercontent.com/cyan-2048/_store/main/arma7x/chess/manifest.webapp"
 type: privileged
 license: MIT
 author: arma7x <ahmadmuhamad101@gmail.com>
@@ -17,6 +17,6 @@ maintainer: Cyan <cyankindasus@protonmail.com>
 has_ads: false
 has_tracking: false
 meta:
-  tags: chess; lichess; game; arma7x; online; ajedrez;
-  categories:
-   - games
+    tags: chess; lichess; game; arma7x; online; ajedrez;
+    categories:
+        - games
