--- a/apps/mdx.yml
+++ b/apps/mdx.yml
@@ -3,17 +3,17 @@ description: MDX Dictionary allows you to open MDict dictionary(mdx only) files,
 icon: "https://raw.githubusercontent.com/arma7x/kai-mdx-dictionary/master/icons/icon112x112.png"
 website: "https://github.com/arma7x"
 download:
-  url: "https://gitlab.com/cyan2048/snek/-/raw/master/arma7x/mdx/mdx.zip"
-  manifest: "https://gitlab.com/cyan2048/snek/-/raw/master/arma7x/mdx/manifest.webapp"
+    url: "https://raw.githubusercontent.com/cyan-2048/_store/main/arma7x/mdx/mdx.zip"
+    manifest: "https://raw.githubusercontent.com/cyan-2048/_store/main/arma7x/mdx/manifest.webapp"
 type: privileged
-locales: 
-  - English
+locales:
+    - English
 license: MIT
 author: arma7x <ahmadmuhamad101@gmail.com>
 maintainer: Cyan <cyankindasus@protonmail.com>
 has_ads: false
 has_tracking: false
 meta:
-  tags: MDX; 
-  categories:
-   - utility
+    tags: MDX;
+    categories:
+        - utility
