--- a/apps/snek.yml
+++ b/apps/snek.yml
@@ -2,16 +2,16 @@ name: Snake
 description: The Nokia game found on Nokia KaiOS devices.
 icon: "https://cdn.discordapp.com/attachments/771512310543155200/839182673389944832/snek.png"
 screenshots:
-  - "https://cdn.discordapp.com/attachments/813030840526569472/833628034497380382/unknown.png"
-  - "https://cdn.discordapp.com/attachments/813030840526569472/833631020413747200/out2.png"
-  - "https://cdn.discordapp.com/attachments/813030840526569472/833631167751258122/out2.png"
-  - "https://cdn.discordapp.com/attachments/813030840526569472/833631246587789333/out2.png"
-  - "https://cdn.discordapp.com/attachments/813030840526569472/833631782540148756/out2.png"
-  - "https://cdn.discordapp.com/attachments/813030840526569472/833632091810955274/out2.png"
+    - "https://cdn.discordapp.com/attachments/813030840526569472/833628034497380382/unknown.png"
+    - "https://cdn.discordapp.com/attachments/813030840526569472/833631020413747200/out2.png"
+    - "https://cdn.discordapp.com/attachments/813030840526569472/833631167751258122/out2.png"
+    - "https://cdn.discordapp.com/attachments/813030840526569472/833631246587789333/out2.png"
+    - "https://cdn.discordapp.com/attachments/813030840526569472/833631782540148756/out2.png"
+    - "https://cdn.discordapp.com/attachments/813030840526569472/833632091810955274/out2.png"
 website: "http://gameloft.com"
 download:
-  url: "https://gitlab.com/cyan2048/snek/-/raw/master/snek.zip?inline=false"
-  manifest: https://gitlab.com/banana-hackers/store-db/-/raw/master/apps/snek.json
+    url: "https://raw.githubusercontent.com/cyan-2048/_store/main/snek.zip?inline=false"
+    manifest: https://gitlab.com/banana-hackers/store-db/-/raw/master/apps/snek.json
 type: certified
 license: Unknown
 author: Gameloft <support@gameloft.com>
@@ -19,6 +19,6 @@ maintainer: Cyan <cyankindasus1@outlook.com>
 has_ads: false
 has_tracking: true
 meta:
-  tags: nokia; classic; snake;
-  categories:
-   - games
+    tags: nokia; classic; snake;
+    categories:
+        - games
