--- a/apps/FoxCastLite.yml
+++ b/apps/FoxCastLite.yml
@@ -2,15 +2,17 @@ name: FoxCast Lite
 description: Foxcasts is an app for subscribing to and listening to podcasts. It started off on FirefoxOS and has been twice rebuilt from the ground up using different frameworks for KaiOS and as a general web app.
 icon: "https://raw.githubusercontent.com/garredow/foxcasts-lite/67c2a4121003bffd88ccd06a261cad8e691dafdf/src/assets/icons/icon-128.png"
 screenshots:
- - "https://raw.githubusercontent.com/garredow/foxcasts-lite/67c2a4121003bffd88ccd06a261cad8e691dafdf/promo/foxcasts_banner1.png"
+ - "https://raw.githubusercontent.com/garredow/foxcasts-lite/main/promo/foxcasts_banner1.png"
 website: "https://garrettdowns.com"
 download:
   url: "https://github.com/JuanCarlosM1/Apps-Download/blob/main/foxcasts-lite-v0.1.0%20beta.zip?raw=true"
-  manifest: https://gitlab.com/banana-hackers/store-db/-/raw/master/apps/FoxCastLite.json
+  manifest: "https://github.com/garredow/foxcasts-lite/blob/7621a66b39e5aac1fcd87e3659c4f20257735152/manifest.webapp"
 type: privileged
 license: MIT
 author: Garrett Downs
 maintainer: JuanCarlosM1
+locales:
+    - English
 has_ads: false
 has_tracking: true
 meta:
